# notecli

./: ARCHITECTURE.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  flake.nix
.github/workflows/: ci.yml  release.yml
migrations/: V1__initial_schema.sql  V2__add_uri_column.sql  V3__add_chat_messages_cache.sql  V4__fix_fts_stale_on_edit.sql  V5__server_detections.sql
src/: api.rs  cli.rs  db.rs  error.rs  event_bus.rs  format.rs  http_server.rs  insecure.rs  keychain.rs  lib.rs  main.rs  models.rs  server_info.rs  streaming.rs
src/commands/: auth.rs  doctor.rs  mod.rs  notes.rs  users.rs
