[package]
name = "notecli"
version = "0.1.0"
edition = "2021"
description = "Headless Misskey client — CLI & library"

[dependencies]
futures-util = "0.3"
reqwest = { version = "0.12", default-features = false, features = ["json", "multipart", "rustls-tls", "stream"] }
rusqlite = { version = "0.35", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tokio-stream = { version = "0.1", features = ["sync"] }
tokio-tungstenite = { version = "0.26", features = ["rustls-tls-native-roots"] }
uuid = { version = "1", features = ["v4"] }
thiserror = "2.0.18"
zeroize = "1"
keyring = { version = "3", optional = true }
axum = "0.8"
tower-http = { version = "0.6", features = ["cors"] }
dirs = "6"

[features]
default = ["keyring"]
