[package]
name = "notecli"
version = "0.1.0"
edition = "2021"
description = "Headless Misskey client — CLI & library"
repository = "https://github.com/hitalin/notecli"
license = "MIT"

[dependencies]
futures-util = "0.3"
reqwest = { version = "0.12", default-features = false, features = ["json", "multipart", "rustls-tls", "stream"] }
rusqlite = { version = "0.35", features = ["bundled"] }
refinery = { version = "0.9", features = ["rusqlite"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tokio-stream = { version = "0.1", features = ["sync"] }
tokio-tungstenite = { version = "0.26", features = ["rustls-tls-native-roots"] }
uuid = { version = "1", features = ["v4"] }
thiserror = "2.0.18"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
zeroize = "1"
keyring-core = { version = "0.7", optional = true }
axum = "0.8"
tower-http = { version = "0.6", features = ["cors"] }
dirs = "6"
clap = { version = "4", features = ["derive"] }

[dev-dependencies]
tempfile = "3"
wiremock = "0.6"

[target.'cfg(target_os = "android")'.dependencies]
android-native-keyring-store = { version = "0.6", optional = true }

[target.'cfg(target_os = "macos")'.dependencies]
apple-native-keyring-store = { version = "0.2", features = ["keychain"], optional = true }

[target.'cfg(target_os = "ios")'.dependencies]
apple-native-keyring-store = { version = "0.2", features = ["protected"], optional = true }

[target.'cfg(target_os = "windows")'.dependencies]
windows-native-keyring-store = { version = "0.5", optional = true }

[target.'cfg(target_os = "linux")'.dependencies]
linux-keyutils-keyring-store = { version = "0.2", optional = true }

[features]
default = ["keyring"]
keyring = [
    "dep:keyring-core",
    "dep:android-native-keyring-store",
    "dep:apple-native-keyring-store",
    "dep:windows-native-keyring-store",
    "dep:linux-keyutils-keyring-store",
]
